fix background overflow issue

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -184,12 +184,11 @@
       position: absolute;
       width: 100%;
       font-family: 'Graphik';
-      font-weight: 600;
       line-height: 50px;
       align-items: center;
       left: 50%;
       transform: translate(-50%, 5%);
-      font-weight: 800 !important;
+      font-weight: 700;
       text-align: center;
       height: 250px;
       text-transform: uppercase;
